Add serialization and deserialization from database. Added take and untake commands.